# llm_utils

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
scripts/: cuda_check.py  model_evaluation.py  ollama_export.py  ollama_import.py
src/: __init__.py
src/cuda_info/: __init__.py  cuda_status.py
src/inference_testing/: __init__.py
src/model_evaluation/: __init__.py  metrics_collector.py  model_backends.py  model_evaluator.py  performance_monitor.py
src/model_management/: __init__.py
src/ollama_utils/: __init__.py  model_exporter.py  model_importer.py
tests/: conftest.py  test_cuda_status.py  test_model_evaluation.py  test_ollama_export.py  test_ollama_import.py
tests/fixtures/: nvcc_version.txt  nvidia_smi_high_usage.txt  nvidia_smi_multi_gpu.txt  nvidia_smi_single_gpu.txt  nvidia_smi_version.txt  ollama_list_output.txt  ollama_modelfile_output.txt  ollama_parameters_output.txt
